--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -5,7 +5,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
-  color: #ffffff;
 }
 html {
   scroll-behavior: smooth;
@@ -13,6 +12,9 @@ html {
 }
 body {
   width: 100%;
+}
+#LandingPage * {
+  color: white;
 }
 section {
   padding: 0 10rem;
