Added filter components

--- a/src/styles/Maps.css
+++ b/src/styles/Maps.css
@@ -1,5 +1,5 @@
 /* Overrides white from Nav.css */
-#MapsPage {
+#maps-page {
   color: black;
 }
 /* #search {
@@ -9,11 +9,11 @@
   top: 10px;
   z-index: 1;
 } */
-#map {
+/* #map {
   width: 100vw;
   height: 100vh;
   z-index: -1;
-}
+} */
 .ol-attribution span {
   color: white;
 }
