--- a/src/components/mapsComponents/Filters.css
+++ b/src/components/mapsComponents/Filters.css
@@ -1,4 +1,23 @@
-button {
+#ct-map-controls {
+  position: absolute;
+  top: 4rem;
+  left: 0.5rem;
+  width: 24rem;
+  background-color: #fefefe;
+  z-index: 1;
+  border-radius: 4px;
+  box-shadow: 0 0 5px 0 #999999;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#ct-map-controls label {
+  color: #333333;
+}
+
+#ct-map-controls button {
   display: inline;
   background-color: rgba(0,60,136,0.5);
   color: #ffffff;
@@ -7,4 +26,5 @@ button {
   line-height: 1.5rem;
   font-size: 1rem;
   padding: 5px 15px;
+  cursor: pointer;
 }
