--- a/src/components/mapsComponents/Places.css
+++ b/src/components/mapsComponents/Places.css
@@ -1,5 +1,6 @@
 .places-container {
   position: absolute;
+  max-height: 10rem;
   left: 0.5rem;
   bottom: 0.5rem;
   width: 24rem;
@@ -10,6 +11,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 .places-container p {
   width: 100%;
