--- a/src/components/mapsComponents/Places.css
+++ b/src/components/mapsComponents/Places.css
@@ -1,6 +1,6 @@
 .places-container {
   position: absolute;
-  max-height: 10rem;
+  max-height: 20rem;
   left: 0.5rem;
   bottom: 0.5rem;
   width: 24rem;
@@ -9,11 +9,10 @@
   border-radius: 4px;
   box-shadow: 0 0 5px 0 #999999;
   padding: 1rem;
-  display: flex;
-  flex-direction: column;
   overflow-y: auto;
 }
 .places-container p {
   width: 100%;
   overflow: hidden;
+  word-break: break-all;
 }
