--- a/src/components/mapsComponents/SearchBar.css
+++ b/src/components/mapsComponents/SearchBar.css
@@ -25,3 +25,37 @@
 #main-search img {
   cursor: pointer;
 }
+#dropdown-container {
+  position: absolute;
+  top: 3.5rem;
+  left: 0.5rem;
+  height: 3.5rem;
+  width: 24rem;
+  display: flex;
+  align-items: center;
+  background-color: #fefefe;
+  /* border-radius: 4px; */
+  /* box-shadow: 0 0 5px 0 #999999; */
+  /* padding: 5px 20px; */
+  overflow:hidden;
+  overflow-y: scroll;
+}
+#dropdown-container ul {
+  background-color: #fefefe;
+  width: 100%;
+  border: none;
+  height: 3rem;
+  list-style-type: none;
+}
+#dropdown-container ul li{
+  border-radius: 4px;
+  box-shadow: 0 0 1px 0 #999999;
+  width: 100%;
+  padding: 5px 20px;
+}
+#dropdown-container ul li:hover{
+  cursor: pointer;
+}
+#list-container{
+  position: relative
+}
