--- a/src/styles/FirstScreen.css
+++ b/src/styles/FirstScreen.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: #ffffff;
+  color: #e1e1e1;
 }
 
 #animation-first {
@@ -70,7 +70,7 @@
 .primary-btn a:link,
 .primary-btn a:active,
 .primary-btn a:visited {
-  color: #000000;
+  color: #0d0d0d;
 }
 #background {
   position: absolute;
