--- a/src/components/aboutComponents/AboutInfo.css
+++ b/src/components/aboutComponents/AboutInfo.css
@@ -1,26 +1,41 @@
 section#about {
-  color: #e1e1e1;
+  color: #ededed;
   padding-top: 80px;
   padding-bottom: 80px;
   background:
-    linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url('../../images/nasa-Q1p7bh3SHj8-unsplash.jpg');
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
-
 section#about h1 {
   font-size: 2.8rem;
-  margin: 20px 0;
+  margin: 40px 0;
 }
 section#about h2 {
   font-size: 1.8rem;
-  margin: 20px 0;
+  margin: 50px 0 30px;
 }
 section#about p {
   margin: 20px 0;
+  font-size: 15px;
 }
 section#about a {
-  color: #dddddd;
+  color: #ededed;
+}
+
+@media (max-width: 767px) {
+  section#about h1 {
+    font-size: 2.2rem;
+    margin: 30px 0;
+  }
+  section#about h2 {
+    font-size: 1.6rem;
+    margin: 40px 0 25px;
+  }
+  section#about p {
+    margin: 15px 0;
+    font-size: 15px;
+  }
 }
