--- a/src/styles/ExploreScreen.css
+++ b/src/styles/ExploreScreen.css
@@ -1,15 +1,14 @@
-/* explore screen */
 #explore-screen {
+  color: #ededed;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 15% auto;
-  gap: 1rem;
+  grid-template-rows: 90px auto;
+  column-gap: 40px;
   background: linear-gradient(to top, transparent, transparent 250px, #0d0d0d 250px, #0d0d0d);
   padding-bottom: 250px;
 }
 #explore-header {
   opacity: 0;
-  color: #e1e1e1;
   text-transform: capitalize;
   grid-area: 1 / 1 / 1 / 4;
 }
@@ -22,14 +21,27 @@
   transform: translateY(20px);
 }
 .explore-tile p {
-  color: #91949a;
+  color: #adadad;
   font-weight: 300;
   transform: translateY(20px);
+}
+
+@media (max-width: 959px) and (min-width: 768px) {
+  #explore-screen {
+    column-gap: 25px;
+  }
 }
 
 @media (max-width: 767px) {
   #explore-screen {
     display: flex;
     flex-direction: column;
+    padding-bottom: 200px;
+  }
+  #explore-header {
+    margin-bottom: 2rem;
+  }
+  .explore-tile {
+    margin-bottom: 20px;
   }
 }
