--- a/src/styles/IntroScreen.css
+++ b/src/styles/IntroScreen.css
@@ -1,15 +1,13 @@
-/* intro screen */
 #intro-screen {
+  color: #ededed;
   height: 500px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 150px auto;
-  gap: 1rem;
+  grid-template-rows: 120px auto;
+  column-gap: 40px;
   background: linear-gradient(to bottom, transparent 300px, #0d0d0d 200px);
 }
-
 #intro-header {
-  color: #e1e1e1;
   text-transform: capitalize;
   width: 75%;
   grid-area: 1 / 1 / 1 / 4;
@@ -19,21 +17,46 @@
   opacity: 0;
 }
 .intro h3 {
-  color: #e1e1e1;
   transform: translateY(20px);
+  margin-bottom: 10px;
 }
 .intro p {
-  color: #91949a;
+  color: #adadad;
   font-weight: 300;
   transform: translateY(20px);
 }
 
-/* narrow screens */
+@media (max-width: 959px) and (min-width: 768px) {
+  #intro-screen {
+    column-gap: 25px;
+  }
+  #intro-header {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  .intro {
+    margin-bottom: 20px;
+  }
+  .intro h3 {
+    margin-bottom: 5px;
+  }
+}
+
 @media (max-width: 767px) {
   #intro-screen {
     height: auto;
     display: flex;
     flex-direction: column;
     padding-bottom: 6rem;
+  }
+  #intro-header {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  .intro {
+    margin-bottom: 20px;
+  }
+  .intro h3 {
+    margin-bottom: 5px;
   }
 }
