--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -18,9 +18,24 @@ h3 {
   font-size: 1.5rem;
 }
 
-@media (max-width: 1023px) and (min-width: 768px) {
-  nav, section, footer {
-    padding: 0 6rem;
+@media (max-width: 1199px) and (min-width: 960px) {
+  section, footer {
+    padding: 0 5rem;
+  }
+  h1 {
+    font-size: 3.2rem;
+  }
+  h2 {
+    font-size: 2.25rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 959px) and (min-width: 768px) {
+  section, footer {
+    padding: 0 3rem;
   }
   h1 {
     font-size: 3.2rem;
@@ -37,7 +52,7 @@ h3 {
   body {
     overflow-x: hidden;
   }
-  nav, section, footer {
+  section, footer {
     padding: 0 2rem;
   }
   h1 {
