--- a/src/components/mapsComponents/Filters.css
+++ b/src/components/mapsComponents/Filters.css
@@ -19,7 +19,7 @@
 
 #ct-map-controls button {
   display: inline;
-  background-color: rgba(0,60,136,0.5);
+  background-color: rgba(0, 60, 136, 0.5);
   color: #ffffff;
   border: none;
   border-radius: 5px;
@@ -27,4 +27,10 @@
   font-size: 1rem;
   padding: 5px 15px;
   cursor: pointer;
+}
+
+@media (max-width: 500px) {
+  #ct-map-controls {
+    width: 16rem;
+  }
 }
