--- a/src/styles/Stories.css
+++ b/src/styles/Stories.css
@@ -1,6 +1,6 @@
 /* STORY CONTAINER*/
 .stories-container {
-  padding-top: 10rem;
+  padding-top: 8rem;
   padding-left: 10rem;
   padding-right: 10rem;
   padding-bottom: 6rem;
@@ -33,7 +33,7 @@
 /* HEADING CARD SECTION */
 .heading-card-section {
   padding: 5px 25px;
-  background-color: #fff;
+  background-color: #e9e9e9;
 }
 
 .title-hyperlink {
@@ -62,7 +62,7 @@
   flex-grow: 1;
   flex-direction: row;
   order: 1;
-  border-top: 1px solid #e2e2e2;
+  border-top: 1px solid #d4d4d4;
 }
 
 .like-comment-button {
@@ -75,4 +75,35 @@
 .far {
   color: black;
   cursor: pointer;
+}
+
+/* SEARCH BAR IN STORIES PAGE */
+.search-bar-container {
+  border-bottom: solid 1px rgba(204, 204, 204, 0.5);
+}
+
+#search-for-story {
+  width: 100%;
+  color: #0d0d0d;
+  background-color: rgba(255, 255, 255, 0.85);
+  border: none;
+  padding: 1rem 1.6rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+#search-for-stories-title {
+  color: #d9d9d9;
+  margin-bottom: 10px;
+}
+
+.result-term {
+  color: #d9d9d9;
+  margin-top: 15px;
+  padding-bottom: 20px;
+}
+
+#search-term {
+  font-style: italic;
+  font-size: 20px;
 }
