--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -85,6 +85,9 @@ nav {
 }
 
 @media (max-width: 767px) {
+  nav {
+    padding: 0 2rem;
+  }
   .nav-links {
     position: absolute;
     right: 0;
