--- a/src/components/mapsComponents/Filters.css
+++ b/src/components/mapsComponents/Filters.css
@@ -1,7 +1,44 @@
-#ct-map-controls {
+.map-search-wrapper {
+  color: #333333;
+  font-weight: 300;
   position: absolute;
-  top: 12rem;
-  left: 0.5rem;
+  top: calc(0.5rem + 3px);
+  left: calc(0.5rem + 3px);
+  right: calc(0.5rem + 3px);
+  height: 2.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.similar-places-filter {
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  background-color: #fefefe;
+  border-radius: 4px;
+  box-shadow: 0 0 5px 0 #999999;
+  margin-left: 0.5rem;
+  padding: 0 55px 0 10px;
+}
+.advanced-filters-wrapper {
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  background-color: #fefefe;
+  border-radius: 4px;
+  box-shadow: 0 0 5px 0 #999999;
+  margin-left: 0.5rem;
+  padding: 0 10px;
+  position: relative;
+}
+.advanced-filters-wrapper p {
+  user-select: none;
+  cursor: pointer;
+}
+#advanced-filters {
+  position: absolute;
+  top: 2.8rem;
+  right: 0;
   width: 24rem;
   background-color: #fefefe;
   z-index: 1;
@@ -11,13 +48,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  display: none;
 }
-
-#ct-map-controls label {
+#advanced-filters label {
   color: #333333;
 }
-
-#ct-map-controls button {
+#advanced-filters button {
   display: inline;
   background-color: rgba(0, 60, 136, 0.5);
   color: #ffffff;
@@ -30,7 +66,7 @@
 }
 
 @media (max-width: 500px) {
-  #ct-map-controls {
+  #advanced-filters {
     width: 16rem;
   }
 }
