--- a/src/components/mapsComponents/SearchBar.css
+++ b/src/components/mapsComponents/SearchBar.css
@@ -1,19 +1,14 @@
 #main-search {
   color: #333333;
-  position: absolute;
-  top: 1.5rem;
-  left: 0.5rem;
-  height: 3rem;
+  height: 2.5rem;
   width: 24rem;
+  padding: 5px 20px;
   display: flex;
   align-items: center;
   background-color: #fefefe;
-  z-index: 1;
   border-radius: 4px;
   box-shadow: 0 0 5px 0 #999999;
-  padding: 5px 20px;
 }
-
 #main-search input {
   height: 100%;
   flex: 1;
@@ -23,15 +18,41 @@
   line-height: 24px;
   outline: none;
 }
-
 #main-search img {
   cursor: pointer;
+}
+#suggestions {
+  visibility: hidden;
+  position: absolute;
+  top: 2.8rem;
+  left: 0;
+  max-height: 175px;
+  height: fit-content;
+  width: 24rem;
+  color: #333333;
+  background-color: #fefefe;
+  box-shadow: 0 0 5px 0 #999999;
+  padding: 5px 0;
+  border-radius: 4px;
+  font-weight: 300;
+  overflow-y: auto;
+}
+#suggestions p {
+  padding: 5px 20px;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+#suggestions p:hover {
+  background-color: #eeeeee;
+}
+#suggestions.active {
+  visibility: visible;
 }
 
 #dropdown-container {
   position: absolute;
   top: 4.5rem;
-  left: 0.5rem;
+  left: calc(0.5rem + 3px);
   height: 3.5rem;
   width: 24rem;
   display: flex;
