--- a/src/components/mapsComponents/Switch.css
+++ b/src/components/mapsComponents/Switch.css
@@ -1,6 +1,3 @@
-.switch-container {
-  padding: 5px 0;
-}
 .switch-label {
   position: relative;
   display: inline-block;
@@ -12,7 +9,7 @@
   display: inline-block;
   position: absolute;
   top: 1px;
-  left: 80px;
+  left: calc(100% + 5px);
   width: 40px;
   height: 20px;
   background-color: #dddddd;
@@ -22,7 +19,7 @@
   content: "";
   position: absolute;
   top:2px;
-  left: 81px;
+  left: calc(100% + 6px);
   width: 18px;
   height: 18px;
   border-radius: 50%;
@@ -30,7 +27,7 @@
   transition: all 0.3s;
 }
 .switch:checked + .switch-label::after {
-  left: 101px;
+  left: calc(100% + 26px);
 }
 .switch:checked + .switch-label::before {
   background-color: rgba(0,60,136,0.5);
