--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,5 @@
 /* footer */
-footer {
+.footer-landing {
   height: 150px;
   padding: 0 10rem;
   display: flex;
@@ -7,7 +7,7 @@ footer {
   position: relative;
   color: #e1e1e1;
 }
-footer div {
+.footer-landing div {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@ footer div {
   bottom: 0;
   left: 0;
   right: 0;
-  background: url('../images/footer-dark-map.png');
+  background: url("../images/footer-dark-map.png");
   background-size: cover;
   z-index: -1;
   box-shadow: 0 350px 500px 0px #0d0d0d inset;
