--- a/src/styles/Stories.css
+++ b/src/styles/Stories.css
@@ -84,6 +84,11 @@
   text-decoration: underline;
 }
 
+.link-preview-container {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 .created-detail {
   font-size: 15px;
   margin-bottom: 5px;
@@ -91,17 +96,20 @@
 
 /* COMMENT AND LIKE CARD SECTION */
 .like-comment-section {
+  height: 60px;
   display: flex;
   background-color: #f5f5f5;
+  border-top: 1px solid #d4d4d4;
 }
 
 .button-group {
   padding: 3px 0;
   display: flex;
+  margin-left: 15px;
+  margin-right: 15px;
   flex-grow: 1;
   flex-direction: row;
   order: 1;
-  border-top: 1px solid #d4d4d4;
 }
 
 .like-comment-button {
@@ -109,6 +117,14 @@
   align-items: center;
   flex: 1 0 0px;
   justify-content: center;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.like-comment-button:hover {
+  background-color: #e8e8e8;
+  border-radius: 5px;
 }
 
 .far {
