Added Map Sign in button

--- a/src/components/mapsComponents/Switch.css
+++ b/src/components/mapsComponents/Switch.css
@@ -3,6 +3,7 @@
   display: inline-block;
   width: max-content;
   cursor: pointer;
+  user-select: none;
 }
 .switch-label::before {
   content: "";
