--- a/src/styles/Stories.css
+++ b/src/styles/Stories.css
@@ -41,7 +41,6 @@
   height: 100%;
   background: url("../images/jeremy-thomas-E0AHdsENmDg-unsplash.jpg");
   filter: brightness(50%);
-  /* background-size: cover; */
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -72,7 +71,7 @@
 /* HEADING CARD SECTION */
 .heading-card-section {
   padding: 5px 25px;
-  background-color: #e9e9e9;
+  background-color: #f0f0f0;
 }
 
 .title-hyperlink {
@@ -90,7 +89,8 @@
 }
 
 .created-detail {
-  font-size: 15px;
+  color: #7d7d7d;
+  font-size: 13px;
   margin-bottom: 5px;
 }
 
@@ -98,8 +98,9 @@
 .like-comment-section {
   height: 60px;
   display: flex;
-  background-color: #f5f5f5;
-  border-top: 1px solid #d4d4d4;
+  background-color: #f4f4f4;
+  border-top: 1px solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
 }
 
 .button-group {
@@ -162,4 +163,27 @@
 #search-term {
   font-style: italic;
   font-size: 20px;
+}
+
+/* COMMENT COMPONENT */
+.comment-input-container {
+  display: flex;
+  background-color: #f7f7f7;
+  padding: 15px 20px;
+  height: 70px;
+}
+
+.post-comment-input {
+  width: 100%;
+  color: #5a5a5a;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid #dbdbdb;
+  padding: 5px 12px;
+  font-size: 15px;
+  font-weight: 300;
+  border-radius: 20px;
+}
+
+.post-comment-input:focus {
+  outline: none;
 }
