--- a/src/styles/Stories.css
+++ b/src/styles/Stories.css
@@ -134,10 +134,6 @@
 }
 
 /* SEARCH BAR IN STORIES PAGE */
-/* .search-bar-container {
-  border-bottom: solid 1px rgba(204, 204, 204, 0.5);
-} */
-
 #search-for-story {
   width: 100%;
   color: #0d0d0d;
@@ -169,11 +165,19 @@
 .comment-input-container {
   display: flex;
   background-color: #f7f7f7;
-  padding: 15px 20px;
+  height: 0px;
+  transition: height 0.2s ease-in-out;
+  overflow: hidden;
+}
+
+.active-comment-input-container {
   height: 70px;
 }
 
-.post-comment-input {
+.comment-input {
+  opacity: 0;
+  transition: opacity 0.8s ease-in-out;
+  margin: 15px 20px;
   width: 100%;
   color: #5a5a5a;
   background-color: rgba(255, 255, 255, 0.3);
@@ -184,6 +188,10 @@
   border-radius: 20px;
 }
 
-.post-comment-input:focus {
+.active-comment-input {
+  opacity: 1;
+}
+
+.comment-input:focus {
   outline: none;
 }
