--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -99,7 +99,7 @@ nav {
     flex-direction: column;
     justify-content: flex-start;
     transform: translateX(100%);
-    transition: transform 0.5s ease-in;
+    transition: transform 0.5s ease-out;
   }
   .nav-links li {
     opacity: 0;
