--- a/src/components/mapsComponents/Filters.css
+++ b/src/components/mapsComponents/Filters.css
@@ -4,30 +4,31 @@
   position: absolute;
   top: calc(0.5rem + 3px);
   left: calc(0.5rem + 3px);
-  right: calc(0.5rem + 3px);
   height: 2.5rem;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+}
+.filters-wrapper {
+  display: flex;
+  margin-left: 0.5rem;
+  height: 2.5rem;
 }
 .similar-places-filter {
-  height: 2.5rem;
+  height: 100%;
   display: flex;
   align-items: center;
   background-color: #fefefe;
   border-radius: 4px;
   box-shadow: 0 0 5px 0 #999999;
-  margin-left: 0.5rem;
   padding: 0 55px 0 10px;
+  margin-right: 0.5rem;
 }
 .advanced-filters-wrapper {
-  height: 2.5rem;
+  height: 100%;
   display: flex;
   align-items: center;
   background-color: #fefefe;
   border-radius: 4px;
   box-shadow: 0 0 5px 0 #999999;
-  margin-left: 0.5rem;
   padding: 0 10px;
   position: relative;
 }
@@ -39,7 +40,6 @@
   position: absolute;
   top: 2.8rem;
   right: 0;
-  width: 24rem;
   background-color: #fefefe;
   z-index: 1;
   border-radius: 4px;
@@ -65,8 +65,18 @@
   cursor: pointer;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 767px) {
+  .map-search-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 90%;
+  }
+  .filters-wrapper {
+    margin-left: 0;
+    margin-top: 0.5rem;
+    height: 2.2rem;
+  }
   #advanced-filters {
-    width: 16rem;
+    top: 2.5rem;
   }
 }
