--- a/src/components/mapsComponents/MapNav.css
+++ b/src/components/mapsComponents/MapNav.css
@@ -1,40 +1,77 @@
-.map-nav-wrapper {
+.map-burger {
   position: absolute;
   top: calc(0.5rem + 3px);
-  right: 20px;
+  right: 25px;
   color: #333333;
   height: 2.5rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
-}
-.map-nav-links {
-  display: none;
-  list-style: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: #ffffff;
-  border-radius: 4px;
-  box-shadow: 0 0 5px 0 #999999;
-  padding: 0 20px;
-}
-.map-nav-links li {
-  margin: 10px 0;
-}
-.map-nav-links a {
-  color: #333333;
-  text-decoration: none;
-}
-.map-burger {
+  justify-content: center;
   cursor: pointer;
+  z-index: 2;
 }
 .map-burger div {
   width: 23px;
   height: 2px;
   background-color: #666666;
-  margin: 5px;
+  margin: 2.5px;
   transition: all 0.3s ease;
 }
 .map-burger:hover div {
   background-color: #444444;
+}
+.map-nav-links {
+  list-style: none;
+  position: absolute;
+  width: 200px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.95);
+  box-shadow: 0 0 5px 0 #999999;
+  padding: 40px;
+  z-index: 1;
+  transform: translateX(100%);
+  transition: transform 0.5s ease-out;
+}
+.map-nav-links li {
+  margin: 20px 0;
+}
+.map-nav-links a {
+  color: #333333;
+  text-decoration: none;
+}
+.toggle .map-line1 {
+  transform: rotate(-45deg) translate(-4px, 5px);
+}
+.toggle .map-line3 {
+  transform: rotate(45deg) translate(-4px, -5px);
+}
+.map-nav-active {
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@media (max-width: 767px) {
+  .map-burger {
+    right: 15px;
+  }
+  .map-burger div {
+    width: 20px;
+    margin: 2px;
+  }
+  .map-nav-links {
+    font-size: 90%;
+  }
 }
