--- a/src/components/mapsComponents/Filters.css
+++ b/src/components/mapsComponents/Filters.css
@@ -63,6 +63,11 @@
   padding: 5px 15px;
   cursor: pointer;
 }
+.divisor {
+  height: 1px;
+  background-color: #e6e6e6;
+  margin: 15px 0;
+}
 
 @media (max-width: 767px) {
   .map-search-wrapper {
