--- a/src/components/mapsComponents/MinMaxRange.css
+++ b/src/components/mapsComponents/MinMaxRange.css
@@ -1,9 +1,15 @@
-.min-max-container {
-  padding: 5px 0;
-  display: flex;
-  align-items: center;
+.min-max-label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 400;
 }
-.min-max-container input {
-  margin: 0 5px;
-  width: 80px;
+.min-max-inputs {
+  display: flex;
+}
+.min-max-inputs input {
+  font-size: 1rem;
+  font-weight: 300;
+  width: 5rem;
+  padding: 0 5px;
+  border: 1px solid #bbbbbb;
 }
