--- a/src/styles/Stories.css
+++ b/src/styles/Stories.css
@@ -62,6 +62,7 @@
 
 /* STORY CARD */
 .story-card {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
   background-color: rgba(0, 0, 0, 0.2);
   border: 0.5px solid rgba(201, 201, 201, 0.4);
   border-radius: 5px;
