--- a/src/components/Maps.css
+++ b/src/components/Maps.css
@@ -1,10 +1,8 @@
 /* Overrides white from Nav.css */
-
 #maps-page {
   position: relative;
   overflow-x: hidden;
 }
-
 #shownav {
   position: absolute;
   left: 0;
@@ -17,31 +15,35 @@
   color: white;
   text-align: top;
 }
-
 #shownav:focus {
   outline: 1px solid rgba(0, 0, 0, 0.5);
 }
-
-/* #search {
-  display: inline-block;
-  position: absolute;
-  left: 50px;
-  top: 10px;
-  z-index: 1;
-} */
-
-/* #map {
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-} */
-
 .ol-attribution span {
   color: white;
 }
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  color: #eeeeee;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 2;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.loading-overlay p {
+  text-transform: capitalize;
+  font-size: 1.2rem;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.9);
+}
+.loading-overlay.loading {
+  display: flex;
+}
 
 /* Below styles for popups borrowed from https://openlayers.org/en/latest/examples/popup.html */
-
 .ol-popup {
   position: absolute;
   background-color: white;
@@ -54,7 +56,6 @@
   left: -50px;
   min-width: 280px;
 }
-
 .ol-popup:after,
 .ol-popup:before {
   top: 100%;
@@ -65,21 +66,18 @@
   position: absolute;
   pointer-events: none;
 }
-
 .ol-popup:after {
   border-top-color: white;
   border-width: 10px;
   left: 48px;
   margin-left: -10px;
 }
-
 .ol-popup:before {
   border-top-color: #cccccc;
   border-width: 11px;
   left: 48px;
   margin-left: -11px;
 }
-
 .ol-popup-closer {
   text-decoration: none;
   position: absolute;
@@ -89,12 +87,16 @@
   border: none;
   padding: 0 !important;
 }
-
 .ol-popup-closer:hover {
   text-decoration: underline;
 }
-
 .ol-popup-closer:after {
   content: "✖";
   color: black;
+}
+
+@media (max-width: 767px) {
+  .loading-overlay p {
+    font-size: 1rem;
+  }
 }
