--- a/src/components/mapsComponents/Places.css
+++ b/src/components/mapsComponents/Places.css
@@ -5,7 +5,6 @@
   bottom: 0.5rem;
   width: 24rem;
   background-color: #fefefe;
-  z-index: 1;
   border-radius: 4px;
   box-shadow: 0 0 5px 0 #999999;
   padding: 1rem;
@@ -15,6 +14,9 @@
   width: 100%;
   overflow: hidden;
   word-break: break-all;
+}
+.target-place {
+  margin-left: 16px;
 }
 @media (max-width: 500px) {
   .places-container {
