--- a/src/components/mapsComponents/SearchBar.css
+++ b/src/components/mapsComponents/SearchBar.css
@@ -30,7 +30,7 @@
   cursor: pointer;
 }
 #suggestions {
-  max-height: 155px;
+  max-height: 240px;
   min-height: 39px;
   width: 100%;
   color: #333333;
@@ -51,21 +51,60 @@
 #suggestions p:hover {
   background-color: #eeeeee;
 }
-
 .place-name-dropdown {
-  font-weight: 500;
-  font-size: 17px;
+  font-weight: 400;
+  font-size: 0.9rem;
 }
-
-.state-nation-name-dropdown-container {
+.place-name-dropdown.highlight {
+  background-color: #eeeeee;
+}
+.state-nation-name-dropdown {
+  font-size: 0.7rem;
+  color: #bdbdbd;
+  display: block;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
-.state-nation-name-dropdown {
-  font-size: 13px;
-  color: #bdbdbd;
+#confirmation {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(10, 10, 10, 0.2);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+#confirmation-panel {
+  height: 400px;
+  width: 300px;
+  color: #333333;
+  background-color: #fefefe;
+  box-shadow: 0 0 5px 0 #999999;
+  border-radius: 4px;
+  padding: 20px;
+  overflow-y: auto;
+}
+#confirmation-panel .close-btn {
+  float: right;
+  cursor: pointer;
+}
+#confirmation-panel .confirmation-title {
+  font-size: 1.4rem;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+#confirmation-panel .confirmation-item {
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+#confirmation-panel .confirmation-item:hover {
+  color: #000000;
+  font-weight: 400;
 }
 
 @media (max-width: 959px) and (min-width: 768px) {
