--- a/src/styles/ExploreScreen.css
+++ b/src/styles/ExploreScreen.css
@@ -4,7 +4,13 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 90px auto;
   column-gap: 40px;
-  background: linear-gradient(to top, transparent, transparent 250px, #0d0d0d 250px, #0d0d0d);
+  background: linear-gradient(
+    to top,
+    transparent,
+    transparent 250px,
+    #0d0d0d 250px,
+    #0d0d0d
+  );
   padding-bottom: 250px;
 }
 #explore-header {
@@ -16,14 +22,22 @@
   opacity: 0;
 }
 .explore-tile img {
-  width: 100%;
-  height: 150px;
-  transform: translateY(20px);
+  /* width: 100%; */
+  height: 400px;
+  /* transform: translateY(20px); */
 }
 .explore-tile p {
   color: #adadad;
   font-weight: 300;
-  transform: translateY(20px);
+  /* transform: translateY(20px); */
+}
+
+.lHTIu {
+  filter: brightness(80%);
+}
+
+.lHTIu:hover {
+  filter: brightness(100%);
 }
 
 @media (max-width: 959px) and (min-width: 768px) {
