--- a/src/styles/ExploreScreen.css
+++ b/src/styles/ExploreScreen.css
@@ -32,29 +32,28 @@
   /* transform: translateY(20px); */
 }
 
-.lHTIu {
+.react_tinylink_card {
   filter: brightness(75%);
   color: #adadad;
   border: none;
   background-color: inherit;
 }
 
-.lHTIu:hover {
+.react_tinylink_card:hover {
   filter: brightness(100%);
   background-color: inherit;
 }
 
 .react_tinylink_card_media {
-  width: 300px;
   height: 200px;
 }
 
-.cCOoAV {
+.react_tinylink_card_content_wrapper {
   padding: 0;
 }
 
 .react_tinylink_card_content_header_description {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .cldxej {
@@ -62,9 +61,18 @@
   margin-bottom: 10px;
 }
 
+@media (max-width: 1075px) and (min-width: 960px) {
+  .react_tinylink_card_content_header_description {
+    font-size: 17px;
+  }
+}
+
 @media (max-width: 959px) and (min-width: 768px) {
   #explore-screen {
     column-gap: 25px;
+  }
+  .react_tinylink_card_content_header_description {
+    font-size: 15px;
   }
 }
 
