--- a/src/styles/Stories.css
+++ b/src/styles/Stories.css
@@ -8,19 +8,64 @@
 }
 
 .spinner-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .spinner {
-  border: 16px solid #575757;
+  border: 3px solid #575757;
   border-radius: 50%;
-  border-top: 16px solid #dbdbdb;
-  width: 80px;
-  height: 80px;
-  animation: spin 2s linear infinite;
+  border-top: 3px solid #dbdbdb;
+  border-bottom: 3px solid #dbdbdb;
+  width: 50px;
+  height: 50px;
+  animation: spin 1.5s linear infinite;
+}
+
+.loading-text {
+  /* animation: loadingAppear 1s step-end; */
+  position: relative;
+}
+
+.loading-text:before {
+  position: absolute;
+  content: "''";
+  right: -22px;
+  width: 20px;
+  animation: ellipsisText 2s infinite;
+}
+
+@keyframes ellipsisText {
+  0% {
+    content: ".";
+  }
+  33% {
+    content: "..";
+  }
+  66% {
+    content: "...";
+  }
+  100% {
+    content: ".";
+  }
+}
+
+@keyframes loadingAppear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes spin {
@@ -46,7 +91,7 @@
   background-attachment: fixed;
 }
 
-.darker {
+/* .darker {
   position: fixed;
   top: 0;
   left: 0;
@@ -58,7 +103,7 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-}
+} */
 
 /* STORY CARD */
 .story-card {
