--- a/src/components/mapsComponents/MapNav.css
+++ b/src/components/mapsComponents/MapNav.css
@@ -11,6 +11,7 @@
   cursor: pointer;
   z-index: 2;
 }
+
 .map-burger div {
   width: 23px;
   height: 2px;
@@ -18,9 +19,11 @@
   margin: 2.5px;
   transition: all 0.3s ease;
 }
+
 .map-burger:hover div {
   background-color: #444444;
 }
+
 .map-nav-links {
   list-style: none;
   position: absolute;
@@ -28,26 +31,31 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.95);
-  box-shadow: 0 0 5px 0 #999999;
+  background-color: rgba(10, 10, 10, 0.95);
+  box-shadow: 0 0 5px 0 #111111;
   padding: 40px;
   z-index: 1;
   transform: translateX(100%);
   transition: transform 0.5s ease-out;
 }
+
 .map-nav-links li {
   margin: 20px 0;
 }
+
 .map-nav-links a {
-  color: #333333;
+  color: #ededed;
   text-decoration: none;
 }
+
 .toggle .map-line1 {
   transform: rotate(-45deg) translate(-4px, 5px);
 }
+
 .toggle .map-line3 {
   transform: rotate(45deg) translate(-4px, -5px);
 }
+
 .map-nav-active {
   transform: translateX(0%);
 }
