--- a/src/components/mapsComponents/MapSignIn.css
+++ b/src/components/mapsComponents/MapSignIn.css
@@ -5,11 +5,13 @@
   right: 70px;
   display: flex;
   align-items: center;
+  border-radius: 4px;
 }
+
 .map-signin-btn {
   border: none;
   border-radius: 4px;
-  background-color: rgba(0,60,136,0.5);
+  background-color: rgb(61, 91, 131);
   color: #ffffff;
   padding: 5px 10px;
   font-size: 0.8rem;
