--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -91,20 +91,6 @@
   background-attachment: fixed;
 }
 
-/* .darker {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  height: 100%;
-  background: url("../images/jeremy-thomas-E0AHdsENmDg-unsplash.jpg");
-  filter: brightness(20%);
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-} */
-
 /* STORY CARD */
 .story-card {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
@@ -214,6 +200,14 @@ hr {
   color: #ddd;
   cursor: pointer;
   margin-right: 5px;
+}
+
+.fas {
+  margin-right: 5px;
+}
+
+.liked {
+  color: #fc0037;
 }
 
 /* SEARCH BAR IN STORIES PAGE */
