--- a/src/components/mapsComponents/Checkbox.css
+++ b/src/components/mapsComponents/Checkbox.css
@@ -3,12 +3,15 @@
   display: flex;
   align-items: center;
 }
+
 .checkbox-label {
   position: relative;
   display: inline-block;
   width: max-content;
   cursor: pointer;
+  font-weight: 400;
 }
+
 .checkbox-custom {
   height: 20px;
   width: 20px;
@@ -18,6 +21,7 @@
   position: relative;
   margin-right: 10px;
 }
+
 .checkbox-custom::after {
   content: "";
   position: absolute;
@@ -29,10 +33,12 @@
   left: 7px;
   top: 4px;
 }
-.checkbox:checked + .checkbox-custom {
-  background-color: rgba(0,60,136,0.5);
+
+.checkbox:checked+.checkbox-custom {
+  background-color: rgba(0, 60, 136, 0.5);
   border: none;
 }
+
 .checkbox {
   display: none;
 }
