--- a/src/components/loginComponents/Profile.css
+++ b/src/components/loginComponents/Profile.css
@@ -106,6 +106,10 @@
   align-items: center;
   cursor: pointer;
   text-transform: capitalize;
+  border: 1px dashed;
+  /* width: 100%; */
+  border-radius: 4px;
+  padding: 1rem 5rem;
 }
 .stories .react_tinylink_card {
   color: #ededed;
