--- a/src/components/landingComponents/ExploreScreen.css
+++ b/src/components/landingComponents/ExploreScreen.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 90px auto;
-  column-gap: 40px;
+  column-gap: 30px;
   background: linear-gradient(
     to top,
     transparent,
@@ -15,21 +15,65 @@
 }
 #explore-header {
   opacity: 0;
+  color: #ffffff;
   text-transform: capitalize;
-  grid-area: 1 / 1 / 1 / 4;
+  grid-area: 1 / 1 / span 1 / span 3;
 }
 .explore-tile {
   opacity: 0;
+  width: 100%;
+  text-decoration: none;
+  color: #ededed;
 }
+
 .explore-tile img {
-  /* width: 100%; */
-  height: 400px;
-  /* transform: translateY(20px); */
+  width: 100%;
+  object-fit: cover;
+  height: 190px;
 }
-.explore-tile p {
+
+.popular-stories-title {
+  font-weight: 800;
+  overflow: hidden;
+  width: 25vw;
+  font-size: 20px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+
+.ps-title-link {
+  color: #ededed;
+  text-decoration: none;
+}
+
+.ps-title-link:hover {
+  text-decoration: underline;
+}
+
+.ps-description {
   color: #adadad;
   font-weight: 300;
-  /* transform: translateY(20px); */
+  transform: translateY(5px);
+}
+
+.spinner-explore-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  grid-area: 2 / 2 / auto / auto;
+  align-items: center;
+  margin-top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.spinner-explore {
+  border: 3px solid #575757;
+  border-radius: 50%;
+  border-bottom: 3px solid #dbdbdb;
+  width: 30px;
+  height: 30px;
+  animation: spin 0.5s linear infinite;
 }
 
 .explore-tile .react_tinylink_card {
@@ -112,6 +156,10 @@
     margin-bottom: 2rem;
   }
   .explore-tile {
-    margin-bottom: 20px;
+    margin-bottom: 60px;
+  }
+
+  .popular-stories-title {
+    width: 100%;
   }
 }
